--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,5 +1,5 @@
 suites:
     main:
-        namespace: codeCommerce
-        psr4_prefix: codeCommerce
+        namespace: CodeCommerce
+        psr4_prefix: CodeCommerce
         src_path: app
