--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.1.1",
         "laravelcollective/html": "~5.0",
         "illuminate/html": "^5.0",
-        "fzaninotto/faker": "^1.5"
+        "fzaninotto/faker": "^1.5",
+        "wesleywillians/laravel-pagseguro": "dev-master",
+        "zendframework/zend-config": "2.4"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
@@ -47,5 +49,6 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "minimum-stability": "dev"
 }
